// <auto-generated>
// Generated by RemoteMvvmTool.
// </auto-generated>

syntax = "proto3";

package thermaltest_protos;

option csharp_namespace = "ThermalTest.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the HP3LSThermalTestViewModel
message HP3LSThermalTestViewModelState {
  map<string, ThermalZoneComponentViewModelState> zones = 1; // Original C#: System.Collections.Generic.Dictionary<Zone, HPSystemsTools.ViewModels.ThermalZoneComponentViewModel> Zones
  string test_settings = 2; // Original C#: TestSettingsModel TestSettings
  bool show_description = 3; // Original C#: bool ShowDescription
  bool show_readme = 4; // Original C#: bool ShowReadme
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message StateChangedRequest {
  int32 state = 1; // Original C#: HPSystemsTools.ViewModels.ThermalStateEnum state
}
message StateChangedResponse {}

message CancelTestRequest {}
message CancelTestResponse {}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service HP3LSThermalTestService {
  rpc GetState (google.protobuf.Empty) returns (HP3LSThermalTestViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc StateChanged (StateChangedRequest) returns (StateChangedResponse);
  rpc CancelTest (CancelTestRequest) returns (CancelTestResponse);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}
